--- a/ChainWalk/ChainWalk_generator.org
+++ b/ChainWalk/ChainWalk_generator.org
@@ -88,8 +88,8 @@ Chainwalk_generator.exe: Chainwalk_generator.o ../utils.o
   #+srcname: Generator_clean_make
   #+begin_src makefile
 Generator_clean:
-	find . -maxdepth 1 -iname "Chainwalk_generator.exe"   | xargs -t rm
-	find . -maxdepth 1 -iname "Chainwalk_generator.c"   | xargs -t rm 
-	find . -maxdepth 1 -iname "Chainwalk_generator.o"   | xargs -t rm
+	find . -maxdepth 1 -iname "Chainwalk_generator.exe"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "Chainwalk_generator.c"   | xargs $(XARGS_OPT) rm 
+	find . -maxdepth 1 -iname "Chainwalk_generator.o"   | xargs $(XARGS_OPT) rm
   #+end_src
 
