--- a/criteria.org
+++ b/criteria.org
@@ -151,7 +151,7 @@ criteria.o: criteria.c criteria.h LSTDQ.h utils.h RL_Globals.h IRL_Globals.h abb
   #+srcname: criteria_clean_make
   #+begin_src makefile
 criteria_clean:
-	find . -maxdepth 1 -iname "criteria.h"   | xargs -t rm
-	find . -maxdepth 1 -iname "criteria.c"   | xargs -t rm 
-	find . -maxdepth 1 -iname "criteria.o"   | xargs -t rm
+	find . -maxdepth 1 -iname "criteria.h"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "criteria.c"   | xargs $(XARGS_OPT) rm 
+	find . -maxdepth 1 -iname "criteria.o"   | xargs $(XARGS_OPT) rm
   #+end_src
