--- a/greedy.org
+++ b/greedy.org
@@ -125,7 +125,7 @@ greedy.o: greedy.c greedy.h RL_Globals.h
   #+srcname: greedy_clean_make
   #+begin_src makefile
 greedy_clean:
-	find . -maxdepth 1 -iname "greedy.h"   | xargs -t rm
-	find . -maxdepth 1 -iname "greedy.c"   | xargs -t rm 
-	find . -maxdepth 1 -iname "greedy.o"   | xargs -t rm
+	find . -maxdepth 1 -iname "greedy.h"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "greedy.c"   | xargs $(XARGS_OPT) rm 
+	find . -maxdepth 1 -iname "greedy.o"   | xargs $(XARGS_OPT) rm
   #+end_src
